Fix child process leaks in the Cloud Print Connector.

Before r526819, the utility process performing the PDF to EMF conversion
disconnects itself. Its ServiceUtilityProcessHost notices the
disconnection and deletes itself. With r526819, the utility process no
longer disconnects itself, and waits forever for its host to tear down
the connection.

Meet this new expectation and tear down the connection from the host
side.

BUG=814984

Change-Id: I505673a82eb4748898819c6664802238738443bb
Reviewed-on: https://chromium-review.googlesource.com/935631
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538959}
Former-commit-id: 6064af4e953d2f127e87101878fe464d63082aa7